tests/parser/bad/stmts_t-throw-with.scilla
scilla_version 0

contract Test
()

transition arbitrary ()
  throw _
end
